# DropConvert

./: .gitignore  Info.plist  Package.swift  README.md
.github/workflows/: release.yml
Sources/DropConvert/: AppDelegate.swift  ConversionEngine.swift  ConverterPanelView.swift  Models.swift  StatusBarController.swift  main.swift
Sources/DropConvert/Resources/: AppIcon.icns
Sources/DropConvertCore/: ConversionEngine.swift  Models.swift
Sources/DropConvertMCP/: main.swift
dropconvert-mcp/: README.md  pyproject.toml
dropconvert-mcp/src/dropconvert_mcp/: server.py  setup.py
scripts/: build-release.sh
website/: index.html  install.sh  vercel.json  version.json
